--- a/resources/scss/components/layout.scss
+++ b/resources/scss/components/layout.scss
@@ -1,3 +1,3 @@
-.layout-header {
-    @apply flex-grow py-24 px-8 sm:px-16 md:px-32 mx-auto;
+.layout {
+    @apply flex-grow py-24 px-8 sm:px-16 md:px-32 max-w-[1200px] mx-auto;
 }
