--- a/resources/scss/components/layout.scss
+++ b/resources/scss/components/layout.scss
@@ -1,3 +1,3 @@
 .layout {
-    @apply flex-grow py-24 px-8 sm:px-16 md:px-32 max-w-[1200px] mx-auto;
+    @apply flex-grow overflow-x-scroll py-24 px-8 sm:px-16 md:px-32 max-w-[1200px] mx-auto;
 }
