--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -19,6 +19,7 @@
 @import "components/tag";
 @import "components/typography";
 @import "components/layout";
+@import "components/success-notification";
 
 /* animations */
 @import "animations/fadein";
