--- a/resources/scss/components/attachment.scss
+++ b/resources/scss/components/attachment.scss
@@ -6,7 +6,7 @@
 
     .icon {
         @apply
-            row-span-2 text-indigo-600 mx-auto scale-150
+            row-span-2 text-blue-600 mx-auto scale-150
     }
 
     .title {
@@ -22,7 +22,7 @@
 
     .icon {
         @apply
-            row-span-2 text-indigo-600 mx-auto;
+            row-span-2 text-blue-600 mx-auto;
     }
 
     .title {
