--- a/resources/scss/components/button.scss
+++ b/resources/scss/components/button.scss
@@ -1,7 +1,7 @@
 @mixin btn {
     @apply
         flex gap-4 items-center justify-center
-        px-8 py-2 bg-indigo-600 rounded-md text-white
+        px-8 py-2 bg-blue-600 rounded-md text-white
         shadow-md hover:shadow-lg
         hover:scale-105 transition-all;
 }
@@ -15,7 +15,7 @@
 }
 
 .btn-shadow-dark {
-    @apply shadow-indigo-950 hover:shadow-indigo-950
+    @apply shadow-blue-950 hover:shadow-blue-950
 }
 
 @mixin nav-btn {
@@ -30,7 +30,7 @@
 .nav-btn-disabled {
     @include btn;
     @include nav-btn;
-    @apply hover:shadow-md hover:scale-100 bg-indigo-700;
+    @apply hover:shadow-md hover:scale-100 bg-blue-700;
 }
 
 .icon-btn {
@@ -42,7 +42,7 @@
     @include btn;
     @apply
         w-8 h-8 p-0
-        hover:shadow-md hover:scale-100 bg-indigo-700;
+        hover:shadow-md hover:scale-100 bg-blue-700;
 }
 
 .btn-group {
