--- a/resources/scss/components/table.scss
+++ b/resources/scss/components/table.scss
@@ -11,6 +11,6 @@
     thead tr th:last-child { @apply rounded-tr-md; }
 
     th {
-        @apply bg-indigo-700 text-white;
+        @apply bg-blue-700 text-white;
     }
 }
