--- a/resources/scss/components/tag.scss
+++ b/resources/scss/components/tag.scss
@@ -1,6 +1,6 @@
 @mixin tag {
     @apply
-        rounded-2xl bg-indigo-600 text-white px-4 py-1;
+        rounded-2xl bg-blue-600 text-white px-4 py-1;
 }
 
 .tag {
@@ -14,5 +14,5 @@
 }
 
 .tag-toggled {
-    @apply bg-indigo-700;
+    @apply bg-blue-700;
 }
