--- a/resources/scss/components/sidebar.scss
+++ b/resources/scss/components/sidebar.scss
@@ -4,17 +4,17 @@
 
 .sidebar-nav-link {
     @apply
-        text-white px-8 py-4 bg-indigo-700
+        text-white px-8 py-4 bg-blue-700
         flex justify-start items-center gap-4
-        hover:text-indigo-700 hover:bg-white
+        hover:text-blue-700 hover:bg-white
         transition-all;
 
     i { @apply transition-all; }
-    &:hover i { @apply text-indigo-700; }
+    &:hover i { @apply text-blue-700; }
 }
 
 .sidebar-nav-link-active {
-    @apply text-indigo-700 bg-white;
+    @apply text-blue-700 bg-white;
 
-    i { @apply text-indigo-700; }
+    i { @apply text-blue-700; }
 }
